Add book style to demonstrate.

--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,10 @@
-\documentclass[a5paper,book]{jlreq}
 
-% Essential to use LuaLaTeX-ja
-\usepackage{luatexja}
+% Using jlreq
+% \documentclass[a5paper,book]{jlreq}
+% \usepackage{luatexja}
 
+% Using standard book
+\documentclass[a5]{book}
 
 \usepackage{graphicx}
 
@@ -14,6 +16,14 @@
   \fbox{\includegraphics*[width=65mm]{fig.png}}
   \caption{rain}
 \end{figure}
+
+The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.
+
+The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.
+
+The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.
+
+The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.
 
 The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.
 
