--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 
-% Using jlreq
+% Also jlreq can produce this problem. 
 % \documentclass[a5paper,book]{jlreq}
 % \usepackage{luatexja}
 
@@ -13,8 +13,7 @@
 \chapter{Rain}
 
 \begin{figure}[b]
-  \fbox{\includegraphics*[width=65mm]{fig.png}}
-  \caption{rain}
+  \fbox{\includegraphics*[]{fig.png}}
 \end{figure}
 
 The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.The rain in spain is mainly in plain.
